[package]
name = "bam-chain"
version = "0.1.0"
authors = ["tz70s <su3g4284zo6y7@gmail.com>"]

[dependencies]
sha3 = "0.7.3"
chrono = "0.4"
log = "0.4"
env_logger = "0.5.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
gotham = "0.2.1"
hyper = "0.11"
mime = "0.3.5"
futures = "0.1"
tokio-core = "0.1"
lazy_static = "1.0"

[dev-dependencies]
env_logger = "0.5.7"
